# porter-svc

./: .env.example  .gitignore  =23.2.1  Dockerfile  README.md  README_S3.md  compose.yaml  pyproject.toml  simple_validate.py  test_s3_api.py  test_s3_integration.py  validate_s3_service.py
.github/: .pr-generatePullRequestMessage.prompt.md
.github/prompts/dev/: .code-review.prompt.md  .code-style.prompt.md
.github/prompts/feature/: Issue_3.1_S3 檔案操作服務.prompt.md
app/: config.py  main.py
app/middleware/: __init__.py  timing.py
app/routers/: __init__.py  endpoints.py  s3_router.py
app/schemas/: s3_schemas.py
app/services/: s3_config.py  s3_exceptions.py  s3_service.py
app/utils/: db.py  logger.py  s3_helpers.py
examples/: s3_usage_examples.py
tests/: test_s3_service.py
